--- a/kennsanippo.html
+++ b/kennsanippo.html
@@ -739,16 +739,29 @@ function init(){
       updateAllInspectorSelects();
     });
     
-unsubscribeDaily = db.collection('dailyReports').orderBy('timestamp', 'desc').onSnapshot(snapshot => {
-  data = [];
-  snapshot.forEach(doc => {
-    const d = doc.data();
-    // ... push
-  });
-  render();
-  updateCnt();
-});
-
+    unsubscribeDaily = db.collection('dailyReports').orderBy('timestamp', 'desc').onSnapshot(snapshot => {
+      data = [];
+      snapshot.forEach(doc => {
+        const d = doc.data();
+        data.push({
+          id: doc.id,
+          pd: d.pd || '',
+          on: d.on || '',
+          pieces: d.pieces || '',
+          boxes: d.boxes || '',
+          remainder: d.remainder || '',
+          ic: d.ic || '0',
+          totalTime: d.totalTime || '0',
+          ln: d.ln || '',
+          it2: d.it2 || '',
+          inspectors: d.inspectors || [],
+          ngMap: d.ngMap ? new Map(Object.entries(d.ngMap)) : new Map(),
+          rm: d.rm || ''
+        });
+      });
+      render();
+      updateCnt();
+    });
   }
 }
 
