--- a/nippoview.html
+++ b/nippoview.html
@@ -761,9 +761,8 @@ function renderProductDefects() {
     }
     
     // 検査時間を時間と分に変換
-    const hours = Math.floor(data.totalTime / 60);
-    const minutes = data.totalTime % 60;
-    const timeDisplay = hours > 0 ? `${hours}時間${minutes}分` : `${minutes}分`;
+const totalMinutes = Number(data.totalTime || 0);
+const timeDisplay = `${totalMinutes.toLocaleString()}分`;
     
     // ロットNoをカンマ区切りで表示
     const lotDisplay = Array.from(data.lotNumbers).join(', ') || '-';
