--- a/nippoview.html
+++ b/nippoview.html
@@ -626,14 +626,13 @@ function renderProductDefects() {
     if (itemDate >= thirtyDaysAgo && itemDate < displayStart) {
       const productCode = item.on || 'unknown';
 
-      if (!historicalData[productCode]) {
-        historicalData[productCode] = {
-          inspection: 0,      // ← キー名を明示（ここが ":" だけになっていた）
-          totalDefects: 0,
-          defectCodes: new Set()
-        };
-      }
-
+if (!historicalData[productCode]) {
+  historicalData[productCode] = {
+    inspection: 0,       // ← キー名を付ける
+    totalDefects: 0,
+    defectCodes: new Set()
+  };
+}
       historicalData[productCode].inspection += parseInt(item.ic || 0);
 
       if (item.ngMap) {
@@ -717,7 +716,9 @@ function renderProductDefects() {
 
       filteredData.forEach(item => {
         if (item.on !== productCode) return;
-
+const typeKey = (item.it2 && item.it2.trim()) ? item.it2.trim() : '通常検査';
+productDefects[productCode].typeCounts[typeKey] =
+  (productDefects[productCode].typeCounts[typeKey] || 0) + 1;
         const itemDateStr = item.pd.replace(/\//g, '-');
         const itemDate = new Date(itemDateStr);
 
