--- a/kennsanippo.html
+++ b/kennsanippo.html
@@ -767,14 +767,12 @@ function init(){
       updateAllInspectorSelects();
     });
     
-const businessDays = getLastNBusinessDays(2);
-const oldestDate = formatDateForFirestore(businessDays[0]);
+
 
 // クエリに日付フィルタを追加
-    unsubscribeDaily = db.collection('dailyReports')
-      .where('pd', '>=', oldestDate)
-      .orderBy('pd', 'desc')
+       unsubscribeDaily = db.collection('dailyReports')
       .orderBy('timestamp', 'desc')
+      .limit(100)
       .onSnapshot(snapshot => {
         data = [];
         lastVisibleDoc = null;
