--- a/nippoview.html
+++ b/nippoview.html
@@ -113,6 +113,26 @@
     .stats{ grid-template-columns:1fr; }
   }
 </style>
+<style>
+  /* 追加: 備考表示 */
+  .remarks{ background:#fff; border:1px solid #e5e7eb; border-radius:2px; padding:12px; margin-bottom:12px; }
+  .remarks-header{ display:flex; align-items:center; gap:8px; font-weight:600; font-size:13px; color:#111827; margin-bottom:8px; }
+  .remarks-count{ font-size:11px; color:#6b7280; background:#f3f4f6; border:1px solid #e5e7eb; padding:2px 6px; border-radius:999px; }
+  .remarks-list{ list-style:none; padding:0; margin:0; display:flex; flex-direction:column; gap:6px; }
+  .remarks-item{ font-size:12px; color:#374151; line-height:1.4; background:#f9fafb; border:1px solid #e5e7eb; border-radius:2px; padding:6px 8px; }
+  .remarks-more{ margin-top:6px; }
+  .remarks-more > summary{ cursor:pointer; font-size:12px; color:#374151; }
+    .product-card{ display:flex; flex-direction:column; }  /* 下段に寄せるため */
+  .card-spacer{ flex:1 1 auto; }                         /* 可変スペーサ */
+  .remarks{ background:#fff; border:1px solid #e5e7eb; border-radius:2px; padding:12px; margin-top:12px; }
+  .remarks-header{ display:flex; align-items:center; gap:8px; font-weight:600; font-size:13px; color:#111827; margin-bottom:8px; }
+  .remarks-count{ font-size:11px; color:#6b7280; background:#f3f4f6; border:1px solid #e5e7eb; padding:2px 6px; border-radius:999px; }
+  .remarks-list{ list-style:none; padding:0; margin:0; display:flex; flex-direction:column; gap:6px; }
+  .remarks-item{ font-size:12px; color:#374151; line-height:1.4; background:#f9fafb; border:1px solid #e5e7eb; border-radius:2px; padding:6px 8px; }
+  .remarks-more{ margin-top:6px; }
+  .remarks-more > summary{ cursor:pointer; font-size:12px; color:#374151; }
+</style>
+  
 </head>
 <body>
 
@@ -558,7 +578,12 @@ function updateStats() {
   // 製品別不良集計を表示
   renderProductDefects();
 }
-
+function escapeHtml(s){
+  if (typeof s !== 'string') return s;
+  return s.replace(/[&<>"']/g, m => ({
+    '&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'
+  }[m]));
+}
 function renderProductDefects() {
   // key: `${productCode}||${typeKey}`
   const productTypeDefects = {};
@@ -763,6 +788,7 @@ function renderProductDefects() {
     html += '</div>';
 
     // 製品情報
+
     html += '<div class="product-info">';
     html += '<div class="product-info-row"><div class="product-info-label">検査数</div>';
     html += `<div class="product-info-value">${data.inspection.toLocaleString()}個</div></div>`;
@@ -796,7 +822,24 @@ function renderProductDefects() {
       html += `<div>${data.totalDefects}</div>`;
       html += '</div>';
     }
+html += '<div class="card-spacer"></div>';
 
+const remarksAll = Array.from(data.remarks || []);
+if (remarksAll.length > 0) {
+  const first = remarksAll.slice(0, 3);
+  const rest  = remarksAll.slice(3);
+  html += '<div class="remarks">';
+  html += `<div class="remarks-header">備考 <span class="remarks-count">${remarksAll.length}件</span></div>`;
+  html += '<ul class="remarks-list">';
+  first.forEach(r => { html += `<li class="remarks-item">${escapeHtml(r)}</li>`; });
+  html += '</ul>';
+  if (rest.length > 0) {
+    html += '<details class="remarks-more"><summary>もっと見る</summary><ul class="remarks-list">';
+    rest.forEach(r => { html += `<li class="remarks-item">${escapeHtml(r)}</li>`; });
+    html += '</ul></details>';
+  }
+  html += '</div>';
+}
     html += '</div>'; // .product-card
   });
 
